# clipkitty

./: .bazelignore  .bazelrc  .gitattributes  .gitignore  .swiftlint.yml  APPSTORE_READINESS.md  AppIcon.icns  Assets.car  BUILD.bazel  Cargo.toml  ClipKittyVideoRecording.xctestplan  LICENSE  MODULE.bazel  Makefile  Package.resolved  Package.swift  Project.swift  README.md  THIRD_PARTY_NOTICES.md  Tuist.swift  VERIFY.md  appcast-state.json  appcast.xml  architecture.md  build-app.sh  deny.toml  flake.nix  index.html  pr-322-review.md  privacy.html  rewrite.md  run-perf-tests.sh  site.css  spec.md  walkthrough.md
.cargo/: config.toml
.claude-architect/: state.json
AppIcon.icon/: icon.json
Casks/: clipkitty.rb
Scripts/: GenInfoPlist.swift  GenXcodeproj.py  GenXcodeproj.swift  PrintPerfResults.swift  analyze-trace-sql.py  analyze-trace.py  build-dmg.sh  check-localization.sh  check-lockfile-drift.sh  check-pinned-actions.sh  ci-screenshot.sh  clean-cargo-cache.sh  create_virtual_display.swift  detect-ios-simulator.sh  generate-marketing-screenshots.sh  generate-perf-db.py  install-hooks.sh  install-sparkle-cli.sh  nix-build-app.sh  nix-generate.sh  nix-sign-app.sh  patch-demo-items.sh  prepare-screenshot-environment.sh  read-build-setting.sh  record-preview-video.sh  resolve-release-version.sh  run-bazel.sh  run-in-nix.sh  run-nav-perf-test.sh  run-perf-test.sh  simulate-navigation.sh  simulate-typing.sh
Sources/: AppDelegate.swift  ClipboardItem.swift  ClipboardStore.swift  ClippySwiftApp.swift  ContentView.swift  FloatingPanelController.swift  FuzzyMatch.swift  HotKeyManager.swift  LinkMetadataFetcher.swift  Settings.swift  SettingsView.swift
Tests/: ClipKittyUITests.xctestplan  FTSSearchTests.swift  PerformanceTests.swift  SnippetTruncationTests.swift  SnippetWindowTests.swift
Tuist/: Package.resolved  Package.swift
bazel/: clipkitty_build_settings.bzl
bazel/modules/apple_services/base/: BUILD.bazel
bazel/modules/apple_services/default/: BUILD.bazel
bazel/modules/mac_app/debug/: BUILD.bazel
bazel/modules/mac_app/hardened/: BUILD.bazel
bazel/modules/mac_platform/file_clipboard/: BUILD.bazel
bazel/modules/mac_platform/full/: BUILD.bazel
bazel/modules/rust/: BUILD.bazel
bazel/modules/shared/base/: BUILD.bazel
bazel/modules/shared/link_previews/: BUILD.bazel
bazel/runners/: BUILD.bazel  macos_ui_test_runner.bzl  macos_ui_test_runner.template.sh  macos_ui_test_runner.template.xctestrun
distribution/: ExportOptions-iOS.plist  Makefile  SyntheticData.sqlite  appstore-connect.sh  appstore-publish.sh  asc-auth.sh  generate-appcast.sh  generate-landing-page.sh  generate-marketing-screenshots.sh  generate_appcast.py  get-age-key.sh  icon-png.sh  image_keywords.csv  inject-images.py  install-deps.sh  intro-video-localized.sh  ios-appstore-publish.sh  landing-page.foot.html  landing-page.head.html  marketing-screenshots-localized.sh  patch-demo-items.sh  prepare-screenshot-environment.sh  publish.py  read-secret.sh  record-preview-video.sh  regenerate-provisioning-secrets.sh  rotate-sparkle-key.sh  setup-dev-provisioning.sh  setup-dev-signing.sh  setup-devid-provisioning.sh  setup-signing.sh  signing-common.sh  update_appcast_state.py  write-secret.sh
docs/: item-identity-unification-plan.md  performance-investigation.md  ranking-v2-plan.md  ranking.md
fastlane/: Appfile  Fastfile
nix/: apple.nix  lib.nix  rust.nix
purr/: Cargo.toml
purr-core/: Cargo.toml
purr-core/src/: benchmark_fixture.rs  content_detection.rs  database.rs  indexer.rs  interface.rs  lib.rs  match_presentation.rs  models.rs  ranking.rs  save_service.rs  search.rs  search_admission.rs  search_result_builder.rs  search_service.rs
purr-core/src/ranking/: matching.rs  policy.rs
purr-sync/: Cargo.toml
purr-sync/src/: compactor.rs  error.rs  event.rs  lib.rs  projector.rs  replay.rs  schema.rs  snapshot.rs  store.rs  types.rs  util.rs
purr/benches/: search_benchmark.rs  search_perf_benchmark.rs
purr/docs/: SEARCH_PERFORMANCE_ANALYSIS.md
purr/scripts/: generate-bindings.sh
purr/src/: benchmark_fixture.rs  candidate.rs  content_detection.rs  database.rs  indexer.rs  interface.rs  lib.rs  match_presentation.rs  models.rs  ranking.rs  save_service.rs  search.rs  search_admission.rs  search_result_builder.rs  search_service.rs  store.rs  sync_adapter.rs  sync_bridge.rs  sync_db.rs
purr/src/ranking/: alignment.rs  folding.rs  matching.rs  policy.rs
purr/src/sync/: compactor.rs  event.rs  mod.rs  projector.rs  replay.rs  snapshot.rs  store.rs  types.rs
purr/tests/: diacritic_search_test.rs  long_content_highlight_test.rs  multi_device_tests.rs  preview_video_search.rs  snippet_tests.rs  sync_tests.rs
rust-core/: Cargo.toml  build.rs
rust-core/benches/: search_bench.rs  trace_perf.rs
rust-core/src/: clipkitty_core.udl  content_detection.rs  database.rs  indexer.rs  interface.rs  lib.rs  link_metadata.rs  models.rs  search.rs  store.rs
rust-core/tests/: preview_line_tests.rs  preview_video_search.rs  snippet_tests.rs
rust-data-gen/: Cargo.toml
secrets/: ADMIN_TOKEN.age  APNS_AUTH_KEY.age  APNS_KEY_ID.age  APPSTORE_APP_CERT_BASE64.age  APPSTORE_CERT_BASE64.age  APPSTORE_KEY_ID.age  CLOUDKIT_MANAGEMENT_TOKEN.age  CLOUDKIT_USER_TOKEN.age  DEVELOPER_ID_PROVISION_PROFILE_BASE64.age  HOMEBREW_TAP_TOKEN.age  IOS_APPSTORE_PROFILE_BASE64.age  IOS_DIST_CERT_BASE64.age  IOS_DIST_P12_PASSWORD.age  IOS_KEYBOARD_PROFILE_BASE64.age  IOS_SHARE_PROFILE_BASE64.age  MACOS_P12_BASE64.age  MACOS_P12_PASSWORD.age  MACOS_TEAM_ID.age  MAC_DEV_KEY_BASE64.age  MAC_DEV_P12_BASE64.age  MAC_DEV_P12_PASSWORD.age  MAC_DEV_PROVISIONING_PROFILE_BASE64.age  NOTARY_ISSUER_ID.age  NOTARY_KEY_BASE64.age  NOTARY_KEY_ID.age  P12_PASSWORD.age  secrets.nix  (+3 more)
tools/xtask/: Cargo.toml
tools/xtask/src/: apple.rs  cli.rs  filesystem.rs  icon.rs  lib.rs  main.rs  model.rs  nix.rs  output.rs  process.rs  repo.rs  version.rs
tools/xtask/src/cmd/: app.rs  build.rs  check.rs  copy.rs  env.rs  marketing.rs  mod.rs  perf.rs  precommit.rs  release.rs  secrets.rs  sign.rs  site.rs
tools/xtask/tests/: cli.rs
(+439 files in other folders)
