[workspace]
members = [
    "purr",
    "purr-sync",
    "distribution/demo-data",
    "distribution/rust-data-gen",
    "tools/xtask",
]
resolver = "2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
debug = false
# Turn silent integer wraps into detectable panics so CRDT counter overflow
# (e.g. a malicious snapshot seeding a counter near u64::MAX) surfaces in testing.
overflow-checks = true

[profile.bench]
opt-level = 3
lto = "thin"
debug = false

[profile.dev]
opt-level = 1
