module(
    name = "clipkitty",
    version = "0.1.0",
)

bazel_dep(name = "apple_support", version = "2.5.2")
bazel_dep(name = "rules_swift", version = "3.6.0", repo_name = "build_bazel_rules_swift")
bazel_dep(name = "rules_apple", version = "4.5.2", repo_name = "build_bazel_rules_apple")
bazel_dep(name = "rules_swift_package_manager", version = "1.15.0")

swift_deps = use_extension("@rules_swift_package_manager//:extensions.bzl", "swift_deps")
swift_deps.from_package(
    resolved = "//:Package.resolved",
    swift = "//:Package.swift",
)

use_repo(
    swift_deps,
    "swift_package",
    "swiftpkg_sparkle",
    "swiftpkg_sttextkitplus",
)
