[package]
name = "purr-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "purr_core"

[dependencies]
rusqlite = { version = "*", features = ["bundled", "modern_sqlite"] }
r2d2 = "*"
r2d2_sqlite = "*"
once_cell = "*"
thiserror = "*"
chrono = { version = "*", features = ["serde"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
base64 = "*"
parking_lot = "*"
url = "*"
csscolorparser = "*"
uniffi = { version = "*", features = ["cli"] }
validator = { version = "0.16", features = ["derive", "unic"] }
tantivy = "*"
image = { version = "*", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
tokio = { version = "*", features = ["full"] }
tokio-util = { version = "*", features = ["rt"] }
async-trait = "*"
rayon = "*"
thread-priority = "*"
rand = "0.8"
anyhow = "*"
futures = "*"
sha2 = "*"
strsim = "*"
triple_accel = "*"

[features]
default = ["serde"]
serde = ["chrono/serde"]
perf-log = []
test-support = []

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
debug = false

[profile.release.package."*"]
opt-level = 3
codegen-units = 1

[profile.bench]
opt-level = 3
lto = "thin"
debug = false

[profile.dev]
opt-level = 1

[dev-dependencies]
tempfile = "*"
rusqlite = { version = "*", features = ["bundled"] }
chrono = "*"
demo-data = { path = "../distribution/demo-data" }
