[package]
name = "purr-sync"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
rusqlite = { version = "*", features = ["bundled", "modern_sqlite"] }
r2d2 = "*"
r2d2_sqlite = "*"
chrono = { version = "*", features = ["serde"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
uuid = { version = "*", features = ["v4", "serde"] }
thiserror = "*"

[dev-dependencies]
tempfile = "*"
