[package]
name = "purr"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
# SYNC: Library name must match the Bazel-linked static library artifact name.
# Output: libpurr.a (static), libpurr.dylib (dynamic)
name = "purr"

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"

[[bin]]
name = "generate-bindings"
path = "src/bin/generate_bindings.rs"

[[bin]]
name = "generate-perf-db"
path = "src/bin/generate_perf_db.rs"

[dependencies]
rusqlite = { version = "*", features = ["bundled", "modern_sqlite"] }
r2d2 = "*"
r2d2_sqlite = "*"
once_cell = "*"
thiserror = "*"
chrono = { version = "*", features = ["serde"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
base64 = "*"
parking_lot = "*"
url = "*"
csscolorparser = "*"
uniffi = { version = "*", features = ["cli"] }
validator = { version = "0.16", features = ["derive", "unic"] }
tantivy = "*"
image = { version = "*", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
tokio = { version = "*", features = ["full"] }
tokio-util = { version = "*", features = ["rt"] }
async-trait = "*"
rayon = "*"
thread-priority = "*"
rand = "0.9"
anyhow = "*"
clap = { version = "*", features = ["derive"] }
futures = "*"
sha2 = "0.10"
strsim = "*"
triple_accel = "*"
uuid = { version = "*", features = ["v4", "serde"] }
purr-sync = { path = "../purr-sync", optional = true }

[features]
default = ["serde", "sync"]
serde = ["chrono/serde"]
sync = ["dep:purr-sync"]
perf-log = []



[build-dependencies]
uniffi = { version = "*", features = ["build"] }

[dev-dependencies]
tempfile = "*"
rusqlite = { version = "*", features = ["bundled"] }
chrono = "*"
demo-data = { path = "../distribution/demo-data" }
