[package]
name = "clipkitty-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
# SYNC: Library name must match Package.swift linkedLibrary("clipkitty_core")
# Output: libclipkitty_core.a (static), libclipkitty_core.dylib (dynamic)
name = "clipkitty_core"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[[bin]]
name = "generate-bindings"
path = "src/bin/generate_bindings.rs"

[dependencies]
rusqlite = { version = "*", features = ["bundled", "modern_sqlite"] }
regex = "*"
once_cell = "*"
thiserror = "*"
chrono = { version = "*", features = ["serde"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
parking_lot = "*"
url = "*"
uniffi = { version = "*", features = ["cli"] }
tantivy = "*"
nucleo-matcher = "*"

[build-dependencies]
uniffi = { version = "*", features = ["build"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1
