[package]
name = "clipkitty-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
# SYNC: Library name must match Package.swift linkedLibrary("clipkitty_core")
# Output: libclipkitty_core.a (static), libclipkitty_core.dylib (dynamic)
name = "clipkitty_core"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[[bin]]
name = "generate-bindings"
path = "src/bin/generate_bindings.rs"

[[bin]]
name = "generate-synthetic-data"
path = "src/bin/generate_synthetic_data.rs"
required-features = ["data-gen"]

[dependencies]
rusqlite = { version = "*", features = ["bundled", "modern_sqlite"] }
regex = "*"
once_cell = "*"
thiserror = "*"
chrono = { version = "*", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "*"
url = "*"
uniffi = { version = "*", features = ["cli"] }
tantivy = "*"
nucleo-matcher = "*"
image = { version = "0.24", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8"
schemars = "0.8"
indicatif = "0.17"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"

[features]
default = ["serde"]
serde = ["chrono/serde"]
data-gen = []

[build-dependencies]
uniffi = { version = "*", features = ["build"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
debug = false

# Optimize all dependencies in release mode too
[profile.release.package."*"]
opt-level = 3
codegen-units = 1

[profile.dev]
opt-level = 1

[dev-dependencies]
tempfile = "3.24.0"
