[package]
name = "clipkitty-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
# SYNC: Library name must match Package.swift linkedLibrary("clipkitty_core")
# Output: libclipkitty_core.a (static), libclipkitty_core.dylib (dynamic)
name = "clipkitty_core"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[[bin]]
name = "generate-bindings"
path = "src/bin/generate_bindings.rs"

[[bin]]
name = "generate-synthetic-data"
path = "src/bin/generate_synthetic_data.rs"
required-features = ["data-gen"]

[dependencies]
rusqlite = { version = "*", features = ["bundled", "modern_sqlite"] }
r2d2 = "*"
r2d2_sqlite = "*"
regex = "*"
once_cell = "*"
thiserror = "*"
chrono = { version = "*", features = ["serde"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
parking_lot = "*"
url = "*"
csscolorparser = "*"
uniffi = { version = "*", features = ["cli"] }
tantivy = "*"
image = { version = "*", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
tokio = { version = "*", features = ["full"] }
tokio-util = { version = "*", features = ["rt"] }
async-trait = "*"
reqwest = { version = "*", default-features = false, features = ["json", "rustls-tls"] }
rayon = "*"
thread-priority = "*"
rand = "*"
schemars = "*"
indicatif = "*"
anyhow = "*"
clap = { version = "*", features = ["derive"] }
futures = "*"

[features]
default = ["serde"]
serde = ["chrono/serde"]
data-gen = []

[build-dependencies]
uniffi = { version = "*", features = ["build"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
debug = false

# Optimize all dependencies in release mode too
[profile.release.package."*"]
opt-level = 3
codegen-units = 1

[profile.bench]
opt-level = 3
lto = "thin"
debug = false

[profile.dev]
opt-level = 1

[dev-dependencies]
tempfile = "*"
criterion = { version = "*", features = ["html_reports"] }

[[bench]]
name = "trace_perf"
harness = false
