load("@build_bazel_rules_apple//apple/testing/default_runner:ios_test_runner.bzl", "ios_test_runner")
load("@build_bazel_rules_apple//apple/testing/default_runner:ios_xctestrun_runner.bzl", "ios_xctestrun_runner")
load("//bazel/runners:macos_ui_test_runner.bzl", "macos_ui_test_runner")

package(default_visibility = ["//visibility:public"])

exports_files(["macos_ui_test_runner.template.xctestrun"])

macos_ui_test_runner(
    name = "macos_ui_runner",
)

ios_test_runner(
    name = "ios_unit_runner",
    device_type = "iPhone 17 Pro",
    os_version = "26.4",
)

ios_xctestrun_runner(
    name = "ios_ui_runner",
    device_type = "iPhone 17 Pro",
    os_version = "26.4",
)
