load("@build_bazel_rules_apple//apple/testing/default_runner:ios_test_runner.bzl", "ios_test_runner")
load("@build_bazel_rules_apple//apple/testing/default_runner:ios_xctestrun_runner.bzl", "ios_xctestrun_runner")
load("//bazel/runners:macos_ui_test_runner.bzl", "macos_ui_test_runner")

package(default_visibility = ["//visibility:private"])

exports_files(
    ["macos_ui_test_runner.template.xctestrun"],
    visibility = ["//visibility:public"],
)

macos_ui_test_runner(
    name = "macos_ui_runner",
    visibility = ["//visibility:public"],
)

# Simulator device and OS version. Bazel requires these as build-time constants.
# Run `make update-sim-config` to auto-detect from the current Xcode toolchain,
# or update manually: `xcrun simctl list runtimes --json`
IOS_SIM_DEVICE = "iPhone 17 Pro"

IOS_SIM_OS = "26.4"

ios_test_runner(
    name = "ios_unit_runner",
    device_type = IOS_SIM_DEVICE,
    os_version = IOS_SIM_OS,
    visibility = ["//visibility:public"],
)

ios_xctestrun_runner(
    name = "ios_ui_runner",
    device_type = IOS_SIM_DEVICE,
    os_version = IOS_SIM_OS,
    visibility = ["//visibility:public"],
)
