[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "xtask"
path = "src/lib.rs"

[[bin]]
name = "clipkitty"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
camino = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4", features = ["derive"] }
csv = "1"
roxmltree = "0.20"
rusqlite = "0.39"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
