load("@build_bazel_rules_swift//swift:swift_library.bzl", "swift_library")

package(default_visibility = ["//visibility:public"])

swift_library(
    name = "ClipKittyAppleServices",
    srcs = ["//:apple_services_srcs"],
    module_name = "ClipKittyAppleServices",
    tags = ["manual"],
    deps = [
        "//bazel/modules/rust:ClipKittyRust",
        "//bazel/modules/shared/base:ClipKittyShared",
    ],
)
