load("@build_bazel_rules_swift//swift:swift_library.bzl", "swift_library")
load("//:bazel/clipkitty_build_settings.bzl", "MACOS_HARDENED_DEFINES", "swift_defines")

package(default_visibility = ["//visibility:public"])

swift_library(
    name = "ClipKitty",
    srcs = ["//:mac_app_srcs"],
    copts = swift_defines(MACOS_HARDENED_DEFINES),
    module_name = "ClipKitty",
    tags = ["manual"],
    deps = [
        "//bazel/modules/apple_services/base:ClipKittyAppleServices",
        "//bazel/modules/mac_platform/synthetic_paste:ClipKittyMacPlatform",
        "//bazel/modules/rust:ClipKittyRust",
        "//bazel/modules/shared/base:ClipKittyShared",
        "@swiftpkg_sttextkitplus//:STTextKitPlus",
    ],
)
