load("@build_bazel_rules_swift//swift:swift_library.bzl", "swift_library")
load("//:bazel/clipkitty_build_settings.bzl", "swift_defines")

package(default_visibility = [
    "//:__pkg__",
    "//bazel:__subpackages__",
])

swift_library(
    name = "ClipKittyMacPlatform",
    srcs = ["//:mac_platform_srcs"],
    copts = swift_defines([
        "ENABLE_FILE_CLIPBOARD_ITEMS",
        "ENABLE_SYNTHETIC_PASTE",
    ]),
    module_name = "ClipKittyMacPlatform",
    tags = ["manual"],
    deps = ["//bazel/modules/shared/link_previews:ClipKittyShared"],
)
