load("@build_bazel_rules_swift//swift:swift_library.bzl", "swift_library")

package(default_visibility = ["//visibility:public"])

swift_library(
    name = "ClipKittyShared",
    srcs = ["//:shared_srcs"],
    module_name = "ClipKittyShared",
    tags = ["manual"],
    deps = ["//bazel/modules/rust:ClipKittyRust"],
)
